--- a/cartuning/src/styles.css
+++ b/cartuning/src/styles.css
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+body {
+    margin: 0px;
+    font-family: 'Roboto', sans-serif;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #dfdfdf; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(255, 34, 34); 
+}
+  
+.no-gutter {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  
+.no-gutter > [class*="col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
