added tuning tab

--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -7,7 +7,7 @@
      </mat-tab>
 
     <mat-tab label="Catalog Tuning">
-      <div style="height: 80vh; background-color: rgba(44,44,44);"></div>
+      <app-tuning></app-tuning>
     </mat-tab>
 
     <mat-tab label="Despre Noi">
@@ -17,7 +17,7 @@
   </mat-tab-group>
 
   <!-- Footer -->
-  <footer>
+  <footer >
     <div class='footer'>
       <div class='footer-overlay'>
         <div class='footer-follow-us'>
@@ -61,15 +61,6 @@
             <mat-list-item role="listitem" style="color: white;">Item 2</mat-list-item>
             <mat-list-item role="listitem" style="color: white;">Item 3</mat-list-item>
           </mat-list>
-
-
-          <mat-list role="list">
-            <mat-list-item role="listitem" style="color: #919496; font-weight: bolder;"></mat-list-item>
-            <mat-list-item role="listitem" style="color: white; ">
-             
-            </mat-list-item>
-          </mat-list>
-
         </div>
         <div class="footer-end">
           © 2019 Toate Drepturile Rezervate! ECU Tunning Services Romania
