--- a/cartuning/src/app/home/home.component.html
+++ b/cartuning/src/app/home/home.component.html
@@ -29,8 +29,7 @@
 <div class='home-container'>
     
     <!-- First section -->
-    <div class='home-container-first'>
-        <div class='row no-gutters home-section'>
+    <div class='row no-gutters home-section'>
             <div class='col-lg-8' style="justify-content: center; align-items: center; margin:auto auto">
                 <div style="font-size: 42px; font-weight: bolder;">
                     PRECISE TUNNING<br>
@@ -62,12 +61,10 @@
                     <fa-icon [icon]='faCalendarCheck'></fa-icon>
                 </div>
             </div>
-        </div>
     </div>
 
     <!-- Second section -->
-    <div class='home-container-first'>
-        <div class='row no-gutter home-section-full'>
+    <div class='row no-gutter home-section-full'>
             <div class='col-lg-3 justify-content-center' style="margin-top: 30px;">
                 <mat-card class="services-card">
                     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
@@ -135,8 +132,212 @@
                     </mat-card-content>
                   </mat-card>
             </div>
+    </div>
+
+    <!-- Third section -->
+    <div class='row no-gutter home-section'>
+        <div class='col '>
+            <div class='row no-gutter d-flex justify-content-center'>
+                <div style="font-size: 42px; font-weight: bold;">CE SPUN CLIENTII NOSTRII</div>
+            </div>
+
+            <div class='row no-gutter d-flex justify-content-center'>
+                <div style="font-size: 14px; margin-top: 20px;">Căteva cuvinte de la cei care ne-au trecut pragul, iar acum mașiniile lor arată uimitor</div>
+            </div>
+
+            <div class='row no-gutter d-flex justify-content-center'>
+                <div style="font-size: 14px;">sunt protejate și atrag toate privirile oriunde ar fi</div>
+            </div>
+
+            <div style="margin-top: 50px;">
+                <owl-carousel-o [options]="customOptions">
+                    <ng-template carouselSlide>
+                        <mat-card class="quotes-card">
+                           
+                            <mat-card-header>
+                                <div mat-card-avatar class="example-header-image"></div>
+                                <mat-card-title>Michael Jackson</mat-card-title>
+                                <mat-card-subtitle class='quote-card-subtitle'>
+                                    <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                    <fa-icon [icon]='faStar'></fa-icon>
+                                    <fa-icon [icon]='faStar'></fa-icon>
+                                    <fa-icon [icon]='faStar'></fa-icon>
+                                    <fa-icon [icon]='faStar'></fa-icon>
+                                </mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-card-content class='quotes-card-content'>
+                                <p>
+                                    "Echipa profesionala și servicii profesionale. Totul sa realizat la standarde înalte și cu echipamente profesionale.Recomand!"
+                                </p>
+                              </mat-card-content>
+                          </mat-card>
+                    </ng-template>  
+
+                    <ng-template carouselSlide>
+                        <mat-card class="quotes-card">
+                            <mat-card-header>
+                              <div mat-card-avatar class="example-header-image"></div>
+                              <mat-card-title>John Cena</mat-card-title>
+                              <mat-card-subtitle class='quote-card-subtitle'>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                            </mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-card-content class='quotes-card-content'>
+                                "Echipa profesionala și servicii profesionale. Totul sa realizat la standarde înalte și cu echipamente profesionale.Recomand!"
+                            </mat-card-content>
+                          </mat-card>
+                    </ng-template>  
+
+                    <ng-template carouselSlide>
+                        <mat-card class="quotes-card">
+                        <mat-card-header>
+                              <div mat-card-avatar class="example-header-image"></div>
+                              <mat-card-title>Le Loup</mat-card-title>
+                              <mat-card-subtitle class='quote-card-subtitle'>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                            </mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-card-content class='quotes-card-content'>
+                                "Echipa profesionala și servicii profesionale. Totul sa realizat la standarde înalte și cu echipamente profesionale.Recomand!"
+                            </mat-card-content>
+                          </mat-card>
+                    </ng-template>  
+
+                    <ng-template carouselSlide>
+                        <mat-card class="quotes-card">
+                            <mat-card-header>
+                              <div mat-card-avatar class="example-header-image"></div>
+                              <mat-card-title>Le Urs</mat-card-title>
+                              <mat-card-subtitle class='quote-card-subtitle'>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                            </mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-card-content class='quotes-card-content'>
+                              <p>
+                                Valoare
+                              </p>
+                            </mat-card-content>
+                          </mat-card>
+                    </ng-template>  
+
+                    <ng-template carouselSlide>
+                        <mat-card class="quotes-card">
+                            <mat-card-header>
+                              <div mat-card-avatar class="example-header-image"></div>
+                              <mat-card-title>Nea Mircea</mat-card-title>
+                              <mat-card-subtitle class='quote-card-subtitle'>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                            </mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-card-content class='quotes-card-content'>
+                                "Echipa profesionala și servicii profesionale. Totul sa realizat la standarde înalte și cu echipamente profesionale.Recomand!"
+                            </mat-card-content>
+                          </mat-card>
+                    </ng-template>  
+
+                    <ng-template carouselSlide>
+                        <mat-card class="quotes-card">
+                            <mat-card-header>
+                              <div mat-card-avatar class="example-header-image"></div>
+                              <mat-card-title>Random Dude</mat-card-title>
+                              <mat-card-subtitle class='quote-card-subtitle'>
+                                <fa-icon [icon]='faStar' style="color: sandybrown;"></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                                <fa-icon [icon]='faStar'></fa-icon>
+                            </mat-card-subtitle>
+                            </mat-card-header>
+                            <mat-card-content class='quotes-card-content'>
+                                "Echipa profesionala și servicii profesionale. Totul sa realizat la standarde înalte și cu echipamente profesionale.Recomand!"
+                            </mat-card-content>
+                          </mat-card>
+                    </ng-template>  
+                </owl-carousel-o>
+            </div>
         </div>
     </div>
 
+    <!-- Fourth section -->
+    <div class='row no-gutter home-section-full' style="background-color: #333; color: white;">
+        
+        <div class='col-lg-4' style="background-color: #f53d14; padding: 130px 40px;">
+            
+            <div class="row">
+                <div class="col-2"></div>
+            
+                <div class="col">
+                    <div class='row '>
+                        <span style="font-weight: bolder; font-size: 28px;"> Ne ocupam de orice problema </span>
+                    </div>
+                    <br>
+                    <div class='row '>
+                        <span> Procesul nostru este unul destul de simplu.</span>
+                    </div>
+                    <br>
+                    <div class='row'>
+                        <button type="button" 
+                            class="btn btn-primary btn-lg bg-light text-dark border-0" 
+                            style="font-size: 14px; font-weight: bold;"> AFLA MAI MULTE</button>
+                    </div>
+                </div>
+            </div>
+           
+           
+        </div>
+        <div class='col-lg-4' style="padding:50px 0px;">
+            <div class='row no-gutter'>
+                <div class='col-2 text-center'>
+                    <fa-icon [icon]='faExclamationCircle' style="font-size: 60px;"></fa-icon>
+                </div>
+                <div class='col'>
+                    <h2>
+                        Serviciu
+                    </h2>
+                    <span style="color: #bbb;">
+                        Echipa noastra ofera o optimizare software a sistemului de injectie ce aduce imbunatatirea performantelor dinamice,
+                         a randamentului si a eficientei motorului. Optimizarea aduce crestere de putere si cuplu motor precum 
+                         si reducerea consumului de carburant si a emisiilor poluante impunand noi standarde in materie de Chiptuning prin eficienta, 
+                         economie de carburant si ecologie. Utilizand o platforma software mai sanatoasa si mai corecta pentru motor, avantajele concrete sunt urmatoarele:
+                    </span>
+                </div>
+            </div>
+            <br><br><br>
+            <div class='row no-gutter'>
+                <div class='col-2 text-center'>
+                    <fa-icon [icon]='faExclamationCircle' style="font-size: 60px;"></fa-icon>
+                </div>
+                <div class='col'>
+                    <h2>
+                        Chiptunning
+                    </h2>
+                    <span style="color: #bbb;">
+                        Operatia de chiptuning poate fi facuta in functie de autoturismul dumneavoastra prin doua metode. 
+                        Prima prin citirea direct pe mufa de diagnoza a acestui soft original (port OBD) sau prin scoaterea ECU-ului 
+                        de pe masina si citirea acestuia pe bench (BDM sau Boot) ore.      
+                    </span>
+                </div>
+            </div>
+        </div>
+        <div class='col-lg-4' style="background-image: url(../../assets/capota_ridicata.jpg); background-size: cover; min-height: 560px;">
+        </div>
+    </div>
+    
 </div>
 
