--- a/cartuning/src/app/app.component.css
+++ b/cartuning/src/app/app.component.css
@@ -7,7 +7,7 @@ mat-tab-header {
     position: fixed!important;
     width: 100%;
     z-index: 99999;
-
+    background-color: black;
 
     -webkit-transition: background-color 500ms ease-in;
     -moz-transition: background-color 500ms ease-in;
@@ -36,21 +36,25 @@ mat-tab-header {
 
 
 .footer {
-    background-image:url('../assets/footer-background.jpg');
-    background-size: contain;
+    /*background-image:url('../assets/footer-background.jpg');*/
+    background-color: #19191B!important; 
+    background-image:url('../assets/carbon-bg.png');
+    
 }
 
 .footer-overlay
 {
-    z-index: 2; width: 100%; background-color: rgba(0, 0, 0, 0.5)!important;
+   
+    z-index: 2; 
+    width: 100%;
 }
 
 .footer-end{
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0, 0.3);
     color: #888;
     align-items: center;
     text-align: center;
-    padding: 20px 0px 20px 0px;
+    padding: 25px 0px;
     font-size: 14px;
 }
 
@@ -94,4 +98,22 @@ mat-tab-header {
 
 .footer-brands > fa-icon {
     font-size: 32px;
+}
+
+.footer-icon {
+    font-size: 42px; 
+    width: 42px!important;
+    height: 42px!important; 
+    color:#E81C2E;
+
+
+    -webkit-transition: color 100ms ease-in;
+    -moz-transition: color 100ms ease-in;
+    -o-transition: color 100ms ease-in;
+    -ms-transition: color 100ms ease-in;
+    transition: color 100ms ease-in;
+}
+
+.footer-icon-col:hover > mat-icon{
+    color: white;
 }
