--- a/cartuning/src/app/tuning/tuning.component.html
+++ b/cartuning/src/app/tuning/tuning.component.html
@@ -1,7 +1,10 @@
 
-<div style="min-height: 100vh;">
+
+
+<div style="min-height: 100vh; margin-top:68px">
+    <app-pageheader title='Catalog Tuning'></app-pageheader>
+
     <div class="tuning-section">
-        
         <mat-horizontal-stepper #stepper  [linear]="true"  (selectionChange)="setIndex($event)">
             <mat-step [completed]="false">
                 <ng-template matStepLabel>{{selectedCar != null ? selectedCar.name : "Car Brand"}}</ng-template>
@@ -63,6 +66,11 @@
                 <ng-template matStepLabel>Done</ng-template>
                 
                 <br>
+
+                <mat-form-field style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="applyFilter($event)">
+                  </mat-form-field>
 
                 <!-- DIESEL ENGINES TABLE -->
                 <span style="color: #3f51b544; font-size: 32px; font-weight: 1000;">Diesel</span>
