fixed filtering in tunning component, added about us component

--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -11,7 +11,7 @@
     </mat-tab>
 
     <mat-tab label="Despre Noi">
-      <div style="height: 80vh; background-color: rgba(44,44,44);"></div>
+      <app-aboutus></app-aboutus>
     </mat-tab>
   </mat-tab-group>
 
