--- a/cartuning/src/app/home/home.component.html
+++ b/cartuning/src/app/home/home.component.html
@@ -7,13 +7,14 @@
                     <span style="color:#E81C2E; font-weight: 800; letter-spacing: 8px;">PRECISE TUNNING</span>
                 </div>
                 <div class='banner-title' >
-                        <div style='text-transform: uppercase; font-weight: 700;'>
-                            <i>ETS </i><i style="color:#E81C2E">Performance</i>
-                        </div>
+                    <i>ETS </i><i style="color:#E81C2E">Performance</i>
                 </div>
                 <div class='banner-text'>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam diam lorem,<br>
-                    fficitur eget erat ac, consectetur porttitor nunc.
+                    Always there for you
+                </div>
+                <div style="font-size: 30px; padding: 40px 0px; letter-spacing: 8px;">
+                   <span>car</span>
+                    <app-scrambletext [scrambleDuration]='140' [phrases]="['.❤', '.tunning()', '.remapping()', '.diagnose()', '__error__' ]" style="color: #E81C2E;"></app-scrambletext>
                 </div>
             </div>
         </div>
