--- a/cartuning/src/app/pageheader/pageheader.component.html
+++ b/cartuning/src/app/pageheader/pageheader.component.html
@@ -5,9 +5,9 @@
     
     <div class='ph-container '>
         <div class="row no-gutter" style="height: 100%;">
-            <span class="ph-title">
+            <div class="ph-title">
                 {{title}}
-            </span>
+            </div>
         </div>
         <div style="width: 70%; height: 8px; margin: 0 auto; top: -4px; position: relative; z-index: 999; background-color: #E81C2E; border-radius: 4px;"></div>
    </div> 
